# gradle-eta

examples/android/: build.gradle  example.cabal  settings.gradle
examples/android/app/: build.gradle
examples/android/app/src/androidTest/java/com/example/eta/: ExampleInstrumentedTest.java
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/eta/: Hello.hs
examples/android/app/src/main/java/com/example/eta/: MainActivity.java
examples/android/app/src/main/res/layout/: activity_main.xml
examples/android/app/src/main/res/values/: strings.xml
examples/android/app/src/test/java/com/example/eta/: ExampleUnitTest.java
examples/android/gradle/wrapper/: gradle-wrapper.properties
